# autotools-book

./: COPYING  Makefile  README
ch2-jupiter/src/: main.c
ch3-jupiter/: .gitignore  Makefile.in
ch3-jupiter/src/: Makefile  Makefile.in
ch4-jupiter/: Makefile.in  configure.ac
ch4-jupiter/src/: Makefile.in  main.c
src/: Makefile
